Adding link to GitHub repository

--- a/src/index.slim
+++ b/src/index.slim
@@ -88,7 +88,7 @@ html lang="en"
 				h2 CSS Creatures are generated from 100% all-natural HTML and fresh-squeezed CSS.
 				.directions-toggle
 					span Make your own
-				h2 Brought to you by <a href="https://twitter.com/bennettfeely">@bennettfeely</a>. Find this project on <a href="https://github.com/bennettfeely">GitHub</a>.
+				h2 Brought to you by <a href="https://twitter.com/bennettfeely">@bennettfeely</a>. Find this project on <a href="https://github.com/bennettfeely/csscreatures">GitHub</a>.
 
 	script src="creatures.min.js"
 	script async="async" src="https://www.googletagmanager.com/gtag/js?id=UA-35724550-1"
