temporary fix for ads

--- a/src/index.slim
+++ b/src/index.slim
@@ -82,6 +82,7 @@ html lang="en"
 		main
 			.container
 				.creatures
+					<div class="item ad-box"><script type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=bennettfeelycom" id="_carbonads_js"></script></div>
 
 		footer
 			.container
