Add message when rate limited

--- a/src/style.scss
+++ b/src/style.scss
@@ -366,6 +366,15 @@ header {
 			display: none;
 		}
 	}
+
+	&.ad-box,
+	&.default-box {
+		display: inline-block !important;
+	}
+
+	&.is-hidden {
+		display: none !important;
+	}
 }
 
 .default-box {
