fix gh link and reorganize

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -278,8 +278,7 @@ header {
 	.color-highlight,
 	.more-highlight,
 	.personality-highlight {
-		animation: highlight-light-on-dark $highlight-duration ease-in-out
-			infinite;
+		animation: highlight-light-on-dark $highlight-duration ease-in-out infinite;
 	}
 
 	.instructions {
